--- a/rootdir/init.rhine.rc
+++ b/rootdir/init.rhine.rc
@@ -161,6 +161,14 @@ on boot
     chown system system /sys/class/leds/wled:backlight/brightness
     chmod 660 /sys/class/leds/wled:backlight/brightness
 
+	# PM8941 flash
+    chown system camera /sys/class/misc/pm8941-flash/device/current1
+    chown system camera /sys/class/misc/pm8941-flash/device/current2
+    chown system camera /sys/class/misc/pm8941-flash/device/fault_status
+    chown system camera /sys/class/misc/pm8941-flash/device/flash_timer
+    chown system camera /sys/class/misc/pm8941-flash/device/mode
+    chown system camera /sys/class/misc/pm8941-flash/device/strobe
+	
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
