--- a/rootdir/system/etc/gps.conf
+++ b/rootdir/system/etc/gps.conf
@@ -1,18 +1,36 @@
-NTP_SERVER=time.gpsonextra.net
+# XTRA_SERVER_QUERY (1=on, 0=off)
+# If XTRA_SERVER_QUERY is on, the XTRA_SERVERs listed
+# below will be ignored, and instead the servers will
+# be queried from the modem.
+XTRA_SERVER_QUERY=0
+# XTRA_SERVERs below are used only if XTRA_SERVER_QUERY
+# is off.
+XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
+XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
+XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
 
-XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra2.bin
-XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra2.bin
-XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra2.bin
+#Test
+NTP_SERVER=time.izatcloud.net
+#Asia
+# NTP_SERVER=asia.pool.ntp.org
+#Europe
+# NTP_SERVER=europe.pool.ntp.org
+#North America
+# NTP_SERVER=north-america.pool.ntp.org
 
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
-DEBUG_LEVEL = 3
+# If DEBUG_LEVEL is commented, Android's logging levels will be used
+DEBUG_LEVEL = 2
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
 
-# supl version 1.0
-SUPL_VER=0x10000
+# supl version 2.0
+SUPL_VER=0x20000
+
+# Emergency SUPL, 1=enable, 0=disable
+SUPL_ES=1
 
 # Error Estimate
 # _SET = 1
@@ -20,13 +38,13 @@ SUPL_VER=0x10000
 ERR_ESTIMATE=0
 
 # GPS Capabilities bit mask
-# SCHEDULING = 1
-# MSB = 2
-# MSA = 4
+# SCHEDULING = 0x01
+# MSB = 0x02
+# MSA = 0x04
 # ON_DEMAND_TIME = 0x10
-# ULP = 0x20
-# default = MSA | MSB | SCHEDULING | ULP
-CAPABILITIES=0x3
+# GEOFENCE = 0x20
+# default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING | GEOFENCE
+CAPABILITIES=0x33
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
@@ -104,3 +122,11 @@ NMEA_PROVIDER=0
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
 LPP_PROFILE = 0
+
+##################################################
+# Select Positioning Protocol on A-GLONASS system
+##################################################
+# 0x1: RRC CPlane
+# 0x2: RRLP UPlane
+# 0x4: LLP Uplane
+A_GLONASS_POS_PROTOCOL_SELECT = 0
