--- a/rootdir/system/etc/gps.conf
+++ b/rootdir/system/etc/gps.conf
@@ -9,6 +9,11 @@ XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
 XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
 XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
 
+# Error Estimate
+# _SET = 1
+# _CLEAR = 0
+ERR_ESTIMATE=0
+
 #Test
 NTP_SERVER=time.izatcloud.net
 #Asia
@@ -21,7 +26,7 @@ NTP_SERVER=time.izatcloud.net
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 2
+DEBUG_LEVEL = 1
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
@@ -32,18 +37,14 @@ SUPL_VER=0x20000
 # Emergency SUPL, 1=enable, 0=disable
 SUPL_ES=1
 
-# Error Estimate
-# _SET = 1
-# _CLEAR = 0
-ERR_ESTIMATE=0
-
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
 # MSB = 0x02
 # MSA = 0x04
 # ON_DEMAND_TIME = 0x10
 # GEOFENCE = 0x20
-default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING
+# default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING
+CAPABILITIES=0x3
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
@@ -61,58 +62,6 @@ SUPL_PORT=7275
 # C2K_HOST=c2k.pde.com or IP
 # C2K_PORT=1234
 
-################################
-# Sensor Settings
-################################
-
-# Needs to be set explicitly based on sensor
-# There is no default value.
-#GYRO_BIAS_RANDOM_WALK=
-#ACCEL_RANDOM_WALK_SPECTRAL_DENSITY=
-#ANGLE_RANDOM_WALK_SPECTRAL_DENSITY=
-#RATE_RANDOM_WALK_SPECTRAL_DENSITY=
-#VELOCITY_RANDOM_WALK_SPECTRAL_DENSITY=
-
-# Sensor Sampling Rate Parameters for Low-Data Rate Filter (should be greater than 0)
-SENSOR_ACCEL_BATCHES_PER_SEC=2
-SENSOR_ACCEL_SAMPLES_PER_BATCH=5
-SENSOR_GYRO_BATCHES_PER_SEC=2
-SENSOR_GYRO_SAMPLES_PER_BATCH=5
-# Sensor Sampling Rate Parameters for High-Data Rate Filter (should be greater than 0)
-SENSOR_ACCEL_BATCHES_PER_SEC_HIGH=4
-SENSOR_ACCEL_SAMPLES_PER_BATCH_HIGH=25
-SENSOR_GYRO_BATCHES_PER_SEC_HIGH=4
-SENSOR_GYRO_SAMPLES_PER_BATCH_HIGH=25
-
-# Sensor Control Mode (0=AUTO, 1=FORCE_ON)
-SENSOR_CONTROL_MODE=0
-
-# Enable or Disable Sensors for GPS use (0=Enable, 1=Disable)
-SENSOR_USAGE=1
-
-# Choose sensor provider interface(1=Sensor1 API, 2=Android NDK)
-SENSOR_PROVIDER=1
-
-# Bit mask used to define which sensor algorithms are used.
-# Setting each bit has the following definition:
-#  0x1 - DISABLE_INS_POSITIONING_FILTER
-#  0x0 - ENABLE_INS_POSITIONING_FILTER
-SENSOR_ALGORITHM_CONFIG_MASK=0x0
-
-################################
-# Indoor Positioning Settings
-################################
-# 0: QUIPC disabled, 1: QUIPC enabled, 2: forced QUIPC only
-QUIPC_ENABLED = 0
-
-################################
-# EXTRA SETTINGS
-################################
-# Enable or Disable Wiper (1=Enable, 0=Disable)
-ENABLE_WIPER=1
-# NMEA provider (1=Modem Processor, 0=Application Processor)
-NMEA_PROVIDER=0
-
 ####################################
 #  LTE Positioning Profile Settings
 ####################################
@@ -121,6 +70,14 @@ NMEA_PROVIDER=0
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
 LPP_PROFILE = 0
+
+################################
+# EXTRA SETTINGS
+################################
+# NMEA provider (1=Modem Processor, 0=Application Processor)
+NMEA_PROVIDER=1
+# Mark if it is a SGLTE target (1=SGLTE, 0=nonSGLTE)
+SGLTE_TARGET=0
 
 ##################################################
 # Select Positioning Protocol on A-GLONASS system
