--- a/rootdir/init.rhine.rc
+++ b/rootdir/init.rhine.rc
@@ -17,6 +17,7 @@ import init.rhine.pwr.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
+    chmod 644 /proc/cmdline
 
 on init
     mkdir /tmp
