rhine: update ueventd
remove not exist i2c-5 ?????
remove uneeded nfc paths and set pn544 and i2c-2 for it

Signed-off-by: David Viteri <davidteri91@gmail.com>

--- a/rootdir/ueventd.rhine.rc
+++ b/rootdir/ueventd.rhine.rc
@@ -74,7 +74,6 @@
 /dev/sdio_tty_ciq_00      0660   system     system
 /dev/tty_sdio_00          0660   system     system
 /dev/ttyGS0               0660   system     system
-/dev/i2c-5                0660   media      media
 /dev/voice_svc            0660   system     audio
 /dev/video32              0660   system     camera
 /dev/video33              0660   system     camera
@@ -93,9 +92,8 @@
 /dev/wcnss_ctrl           0660   system     system
 
 # NFC
-/dev/nfc-nci              0660   nfc        nfc
+/dev/i2c-2                0660   nfc        nfc
 /dev/pn544                0660   nfc        nfc
-/dev/pn547                0660   nfc        nfc
 
 # LED
 /sys/devices/01-qcom,leds-d000/leds/led:* max_brightness          0644 root system
