--- a/rootdir/ueventd.rhine.rc
+++ b/rootdir/ueventd.rhine.rc
@@ -9,10 +9,9 @@
 /dev/smd_cxm_qmi          0640   radio      radio
 /dev/smd5                 0660   system     system
 /dev/smd6                 0660   system     system
-/dev/smd7                 0660   bluetooth  bluetooth
+/dev/smd7                 0660   bluetooth  net_bt_stack
 /dev/smd11                0660   radio      radio
 /dev/radio0               0640   system     system
-/dev/rfcomm0              0660   bluetooth  bluetooth
 /dev/smdcntl0             0640   radio      radio
 /dev/smdcntl1             0640   radio      radio
 /dev/smdcntl2             0640   radio      radio
@@ -82,11 +81,8 @@
 
 # BT
 /dev/hidraw*                                0666 system    system
-/dev/rfkill                                 0660 wifi      wifi
-/dev/ttyHS0                                 0660 bluetooth bluetooth
-/dev/ttyHS2                                 0660 bluetooth bluetooth
-/sys/module/hci_smd/parameters/hcismd_set   0660 bluetooth bluetooth
-/sys/devices/platform/msm_serial_hs.0/clock 0660 bluetooth bluetooth
+/dev/rfkill                                 0660 bluetooth net_bt_stack
+/dev/ttyHSL0                                0660 bluetooth net_bt_stack
 
 # WLAN
 /dev/wcnss_wlan           0660   system     system
