rhine: add more video permissions
these entries are present on honami at least

Signed-off-by: David Viteri <davidteri91@gmail.com>

--- a/rootdir/init.rhine.rc
+++ b/rootdir/init.rhine.rc
@@ -200,11 +200,15 @@ on boot
     symlink /dev/graphics/fb1 /dev/graphics/hdmi
 
     # Remove write permissions to video related nodes
+    chown system graphics /sys/class/graphics/fb1/avi_itc
+    chown system graphics /sys/class/graphics/fb1/avi_cn0_1
     chown system graphics /sys/class/graphics/fb1/hpd
     chown system graphics /sys/class/graphics/fb1/product_description
     chown system graphics /sys/class/graphics/fb1/vendor_name
     chown system graphics /sys/class/graphics/fb1/video_mode
     chown system graphics /sys/class/graphics/fb1/hdcp/tp
+    chmod 0664 /sys/class/graphics/fb1/avi_itc
+    chmod 0664 /sys/class/graphics/fb1/avi_cn0_1
     chmod 0664 /sys/class/graphics/fb1/hpd
     chmod 0664 /sys/class/graphics/fb1/product_description
     chmod 0664 /sys/class/graphics/fb1/vendor_name
