--- a/rootdir/ueventd.rhine.rc
+++ b/rootdir/ueventd.rhine.rc
@@ -108,8 +108,10 @@
 /sys/devices/01-qcom,leds-d800/leds/wled:backlight brightness     0664 system system
 
 # IR Remote
-/dev/ttyHSL2 0660 system system /sys/devices/platform/ir_remote_control enable 0220 system system 
+/dev/ttyHSL2 0660 system system /sys/devices/platform/ir_remote_control enable 0220 system system
 
+/sys/devices/virtual/graphics/fb1/avi_itc             0664 system graphics
+/sys/devices/virtual/graphics/fb1/avi_cn0_1           0664 system graphics
 /sys/devices/virtual/graphics/fb1/hpd                 0664 system graphics
 /sys/devices/virtual/graphics/fb1/video_mode          0664 system graphics
 /sys/devices/virtual/graphics/fb1/vendor_name         0664 system graphics
