switch to OSS macaddrsetup
macaddrsetup is a small tool that loads BT and WIFI mac addreses

Signed-off-by: Alin Jerpelea <alin.jerpelea@sonymobile.com>

--- a/rootdir/init.rhine.rc
+++ b/rootdir/init.rhine.rc
@@ -383,7 +383,7 @@ service thermanager /system/bin/thermanager /system/etc/thermanager.xml
     group root
 
 #OSS WLAN setup
-service addrsetup /system/bin/addrsetup /sys/devices/fb000000.qcom,wcnss-wlan/wcnss_mac_addr
+service macaddrsetup /system/bin/macaddrsetup /sys/devices/fb000000.qcom,wcnss-wlan/wcnss_mac_addr
     class main
     user root
     oneshot
