Add a simple PowerHAL
We dropped the QCOM PowerHAL because it relies on too many
proprietary blobs. Instead we have a kernel solution, but
several features still depend on the presence of a PowerHAL,
so Android is actually not happy about it.

Signed-off-by: Adam Farden <adam@farden.cz>

power: add some PowerHAL enhancements

When the device is asleep we don't need to scale up the cpu
frequencies so we can tune the governor to make it twice as hard
to scale up and twice as easy to scale down.

We do this by adding profiles. the 'power saving' profile can
be used when the device is asleep, or when Android enters a low
power mode. This profile also lowers the 'hispeed' from 1190MHz
to 960MHz.

The PowerHAL can also briefly boost frequencies to the 'hispeed'
frequency when the user interacts with the device. The boost is
only for 80ms but this dramatically improves responsiveness,
including 20% quicker wake from sleep.

Also fix some warnings, and the make sure we don't leave 'power
saving' mode when waking if 'low power' mode is active.

Signed-off-by: Adam Farden <adam@farden.cz>

PowerHAL: AOSP does not set the governor perms

Many other custom ROMs set this automatically

Signed-off-by: Adam Farden <adam@farden.cz>

--- a/rootdir/init.rhine.pwr.rc
+++ b/rootdir/init.rhine.pwr.rc
@@ -66,3 +66,20 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpufreq/interactive/timer_slack 20000
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor "msm-adreno-tz"
     write /dev/cpuctl/cpu.notify_on_migrate 1
+
+    # Simple PowerHAL: AOSP does not set the governor perms
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/align_windows
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/boost
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/boostpulse
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/boostpulse_duration
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/io_is_busy
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/max_freq_hysteresis
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/min_sample_time
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/target_loads
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/timer_rate
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/timer_slack
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/use_migration_notif
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/use_sched_load
