lights: We like the blinky blinky
This lights HAL was written according to the Sony driver.
Adjust to the unmodified leds-qpnp driver.

Change-Id: I6ab570f700b485f3ea21208b7c0059926d2ce354
Signed-off-by: Adam Farden <adam@farden.cz>

--- a/rootdir/ueventd.rhine.rc
+++ b/rootdir/ueventd.rhine.rc
@@ -99,12 +99,11 @@
 /dev/pn547                0660   nfc        nfc
 
 # LED
-/sys/devices/01-qcom,leds-d000/leds/led:* max_brightness          0644 root system
+/sys/devices/01-qcom,leds-d000/leds/led:* max_brightness          0664 system system
 /sys/devices/01-qcom,leds-d000/leds/led:* brightness              0664 system system
-/sys/devices/01-qcom,leds-d000/leds/led:* lut_pwm                 0664 system system
-/sys/devices/01-qcom,leds-d000/leds/led:* step_duration           0664 system system
-/sys/devices/01-qcom,leds-d000/leds/rgb start_blink               0220 system system
-/sys/devices/01-qcom,leds-d000/leds/rgb sync_state                0664 system system
+/sys/devices/01-qcom,leds-d000/leds/led:* blink                   0664 system system
+/sys/devices/01-qcom,leds-d000/leds/led:* duty_pcts               0664 system system
+/sys/devices/01-qcom,leds-d000/leds/led:* ramp_step_ms            0664 system system
 /sys/devices/01-qcom,leds-d800/leds/wled:backlight max_brightness 0664 system system
 /sys/devices/01-qcom,leds-d800/leds/wled:backlight brightness     0664 system system
 
